[gd_scene load_steps=13 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://gui/title5.png" type="Texture" id=2]
[ext_resource path="res://menu/menu_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Geo-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://menu/button_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://menu/menu_button.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Title" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = 30.0
margin_right = 928.0
margin_bottom = 420.0
rect_min_size = Vector2( 592, 390 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Buttons" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = 430.0
margin_right = 2896.0
margin_bottom = 682.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="MainButtons" type="Control" parent="Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 252.0
rect_min_size = Vector2( 1280, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Play" parent="Buttons/MainButtons" index="0" instance=ExtResource( 3 )]

text = "Play"

[node name="Options" parent="Buttons/MainButtons" index="1" instance=ExtResource( 3 )]

margin_top = 64.0
margin_right = 147.0
margin_bottom = 124.0
text = "Options"

[node name="Credits" parent="Buttons/MainButtons" index="2" instance=ExtResource( 3 )]

margin_top = 128.0
margin_right = 143.0
margin_bottom = 188.0
text = "Credits"

[node name="Quit" parent="Buttons/MainButtons" index="3" instance=ExtResource( 3 )]

margin_top = 192.0
margin_right = 78.0
margin_bottom = 252.0
text = "Quit"
_sections_unfolded = [ "Focus", "Hint", "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="PlayButtons" type="Control" parent="Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1284.0
margin_right = 2564.0
margin_bottom = 252.0
rect_min_size = Vector2( 1280, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Story" parent="Buttons/PlayButtons" index="0" instance=ExtResource( 3 )]

margin_right = 109.0
focus_mode = 2
text = "Story"
descriptor_path = NodePath("../ModeDesc")
description = "Story Mode description (export var in this button)"

[node name="Arcade" parent="Buttons/PlayButtons" index="1" instance=ExtResource( 3 )]

margin_top = 64.0
margin_right = 134.0
margin_bottom = 124.0
focus_mode = 2
text = "Arcade"
descriptor_path = NodePath("../ModeDesc")
description = "Arcade Mode description (export var in this button)"

[node name="Survival" parent="Buttons/PlayButtons" index="2" instance=ExtResource( 3 )]

margin_top = 128.0
margin_right = 152.0
margin_bottom = 188.0
focus_mode = 2
text = "Survival"
descriptor_path = NodePath("../ModeDesc")
description = "Survival Mode description (export var in this button)"

[node name="Back" parent="Buttons/PlayButtons" index="3" instance=ExtResource( 3 )]

margin_top = 192.0
margin_right = 92.0
margin_bottom = 252.0
focus_mode = 2
text = "Back"

[node name="ModeDesc" type="Label" parent="Buttons/PlayButtons" index="4"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -860.0
margin_top = -126.0
margin_right = -400.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts", "custom_styles" ]

[node name="PlayButtons2" type="Control" parent="Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2568.0
margin_right = 3848.0
margin_bottom = 252.0
rect_min_size = Vector2( 1280, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Fullscreen" type="Label" parent="Buttons/PlayButtons2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 109.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 1
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Fullscreen"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Focus", "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="SFX" type="Label" parent="Buttons/PlayButtons2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 134.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 1
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SFX"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Focus", "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Music" type="Label" parent="Buttons/PlayButtons2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 152.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 1
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Music"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Focus", "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Back" type="Button" parent="Buttons/PlayButtons2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 92.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.333333, 0.333333, 0.333333, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.627451, 1 )
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
group = null
text = "Back"
flat = true
align = 0
script = ExtResource( 6 )
_sections_unfolded = [ "Focus", "Rect", "custom_colors", "custom_fonts", "custom_styles" ]
descriptor_path = null
description = null

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="pressed" from="Buttons/MainButtons/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Buttons/MainButtons/Options" to="." method="_on_Options_pressed"]

[connection signal="pressed" from="Buttons/MainButtons/Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="Buttons/MainButtons/Quit" to="." method="_on_Quit_pressed"]

[connection signal="pressed" from="Buttons/PlayButtons/Story" to="." method="_on_Story_pressed"]

[connection signal="pressed" from="Buttons/PlayButtons/Arcade" to="." method="_on_Arcade_pressed"]

[connection signal="pressed" from="Buttons/PlayButtons/Survival" to="." method="_on_Survival_pressed"]

[connection signal="pressed" from="Buttons/PlayButtons/Back" to="." method="_on_Back_pressed"]

[connection signal="mouse_entered" from="Buttons/PlayButtons2/Fullscreen" to="Buttons/PlayButtons2/Fullscreen" method="_on_MenuButton_mouse_entered"]

[connection signal="mouse_exited" from="Buttons/PlayButtons2/Fullscreen" to="Buttons/PlayButtons2/Fullscreen" method="_on_MenuButton_mouse_exited"]

[connection signal="mouse_entered" from="Buttons/PlayButtons2/SFX" to="Buttons/PlayButtons2/SFX" method="_on_MenuButton_mouse_entered"]

[connection signal="mouse_exited" from="Buttons/PlayButtons2/SFX" to="Buttons/PlayButtons2/SFX" method="_on_MenuButton_mouse_exited"]

[connection signal="mouse_entered" from="Buttons/PlayButtons2/Music" to="Buttons/PlayButtons2/Music" method="_on_MenuButton_mouse_entered"]

[connection signal="mouse_exited" from="Buttons/PlayButtons2/Music" to="Buttons/PlayButtons2/Music" method="_on_MenuButton_mouse_exited"]

[connection signal="mouse_entered" from="Buttons/PlayButtons2/Back" to="Buttons/PlayButtons2/Back" method="_on_MenuButton_mouse_entered"]

[connection signal="mouse_exited" from="Buttons/PlayButtons2/Back" to="Buttons/PlayButtons2/Back" method="_on_MenuButton_mouse_exited"]

[connection signal="pressed" from="Buttons/PlayButtons2/Back" to="." method="_on_Back_pressed"]



